--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
       <h2>Årsmöte</h2>
       <h3>2017</h3>
         <p>
-        <img class="pdf-small" src="img/pdf.png">Kallelse 2017<br>
-        <img class="pdf-small" src="img/pdf.png">Förvaltningsberättelse 2016<br>
-        <img class="pdf-small" src="img/pdf.png">Årsredovisning 2016<br>
-        <img class="pdf-small" src="img/pdf.png">Framtida Planer<br>
+        <a href="https://drive.google.com/file/d/1tNgxtgBA2smyiaBhg2zBLVjXxnVdYDfK/view?usp=sharing" target="_blank">Kallelse 2017</a><br>
+        <a href="https://drive.google.com/file/d/1sl68WkoXAncfnZmE1pNmOr4hTUf3TSuE/view?usp=sharing" target="_blank"><img class="pdf-small" src="img/pdf.png">Förvaltningsberättelse 2016</a><br>
+        <a href="https://drive.google.com/file/d/1zUXbcZ6Gz907JPy9dmtV-ztdJLJAe-RY/view?usp=sharing" target="_blank"><img class="pdf-small" src="img/pdf.png"><img class="pdf-small" src="img/pdf.png">Årsredovisning 2016</a><br>
+        <a href="https://drive.google.com/file/d/13pwfO9zzOdKPkbBg2QFQlTI5v3B37WzG/view?usp=sharing" target="_blank"><img class="pdf-small" src="img/pdf.png">Framtida Planer</a><br>
         </p>
 
 
