--- a/index.html
+++ b/index.html
@@ -337,10 +337,13 @@
       <p><small>2017-12-10</small> Året närmar sig sitt slut och styrelsen sammanställer inkomna motioner, dessa publiceras här innan årsmötet som infaller i mars. Kallelse kommer att skickas ut via e-post.</p>
 
       <h2>Felanmälan</h2>
-      <p>Träutensilierna i ett tryckeri äro ingalunda en
-        faktor där trevnadens ordningens och ekonomiens upprätthållande,
-        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
-        och ekon och miens därmed upprätthållande.</p>
+      <p><b>Fjärrvärme</b> - <a href="http://www.umeaenergi.se/kundservice/felanmalan" target="_blank">Umeå Energi</a><br>
+        <b>Bredband</b> - <a href="https://www.bredband2.com/privat/kundtjanst/kontakta-oss/" target="_blank">Bredband2</a><br>
+        <b>Sophämtning radhus</b> - Stena Recycling (090-777 222)<br>
+        <b>TV</b> - Styrelsen<br>
+        <b>Snöröjning</b> - Styrelsen<br>
+        <b>Problem med garage i länga</b> - Styrelsen<br>
+      </p>
 
     </section>
 
