--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
   </nav>
 
-  <nav id="mobile-nav" class="d-flex flex-column justify-content-center align-content-center">
+  <nav id="mobile-nav" class="flex-column justify-content-center align-content-center">
 
     <div class="menu-row" onclick="window.open('https://drive.google.com/file/d/1NKxWlKXxKc-qktG2gYp94S9ORDdbTA1F/view?usp=sharing','_blank');">
         <img class="menu-img" src="img/infopaerm.png">
