--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
   <article class="row">
     <section class="col-12 col-lg-5">
       <h2>Aktuellt</h2>
-      <p><small>2017-12-10</small> Året närmar sig sitt slut och styrelsen sammanställer inkomna motioner, dessa publiceras här innan årsmötet som infaller i mars. Kallelse kommer att skickas ut via e-post.</p>
-
+      <p><small>2018-02-18</small> Missa inte årsmötet som äger rum på söndag 2018-03-18 klockan 18:00 på Tomtebogårds skola matsalen (ingång huvudentré mot Älvans väg)<br>br>Handlingar till stämman ska ha skickats ut via e-post men finns också att hämta här nedan</p>
+      
       <h2>Felanmälan</h2>
       <p><b>Fjärrvärme</b> - <a href="http://www.umeaenergi.se/kundservice/felanmalan" target="_blank">Umeå Energi</a><br>
         <b>Bredband</b> - <a href="https://www.bredband2.com/privat/kundtjanst/kontakta-oss/" target="_blank">Bredband2</a><br>
