--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   <article class="row">
     <section class="col-12 col-lg-5">
       <h2>Aktuellt</h2>
-      <p><small>2018-02-18</small> Missa inte årsmötet som äger rum på söndag 2018-03-18 klockan 18:00 på Tomtebogårds skola matsalen (ingång huvudentré mot Älvans väg)<br>br>Handlingar till stämman ska ha skickats ut via e-post men finns också att hämta här nedan</p>
+      <p><small>2018-02-18</small> Missa inte årsmötet som äger rum på söndag 2018-03-18 klockan 18:00 på Tomtebogårds skola matsalen (ingång huvudentré mot Älvans väg)<br>br>Handlingar och kallelse till stämman har skickats ut för en tid sedan via epost men finns också att hämta på denna sida.</p>
       
       <h2>Felanmälan</h2>
       <p><b>Fjärrvärme</b> - <a href="http://www.umeaenergi.se/kundservice/felanmalan" target="_blank">Umeå Energi</a><br>
