--- a/index.html
+++ b/index.html
@@ -276,14 +276,7 @@
     </div>
   </div>
 
-  <div class="col">
-    <div class="card  mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
-      <img class="card-img-top " src="img/aorsmoete.png">
-      <div class="card-body ">
-        <h6 class="card-title  text-center">Årsmöte</h6>
-      </div>
-    </div>
-  </div>
+
 
   </nav>
 
@@ -352,7 +345,7 @@
       <h2>Nyinflyttad?</h2>
       <p>Välkommen till Sjöfruns samfällighet, vi hoppas att du ska trivas här! En snabb vägg till det viktigaste du behöver ha koll på hittar du i vår <a href="https://drive.google.com/file/d/1NKxWlKXxKc-qktG2gYp94S9ORDdbTA1F/view?usp=sharing" target="_blank">Infopärm</a>. Förutom det är det viktigt att du skickar dina kontaktuppgifter till styrelsen så att du inte missar viktig information. </p>
 
-      <h2>Årsmöte</h2>
+      <h2>Årsmöteshandlingar</h2>
       <h3>2017</h3>
         <p>
         <a href="https://drive.google.com/file/d/1tNgxtgBA2smyiaBhg2zBLVjXxnVdYDfK/view?usp=sharing" target="_blank"><img class="pdf-small" src="img/pdf.png">Kallelse 2017</a><br>
